--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -44,7 +44,7 @@ math.log(2 ** 64, 1.1) ≈ 465
 
 *内存表示是有endian的，所以符号为不一定是最“左边”*
 
-### 正数表示
+### 正数
 正数和零的表示法与其二进制写法相同，只是左边要补符号位0
 
 8位二进制表示数字时:
@@ -58,7 +58,7 @@ math.log(2 ** 64, 1.1) ≈ 465
 	000 0101 = 5
 	加上符号位 = +5
 
-### 负数表示(补码)
+### 负数(补码)
 负数的表示法，首先是将其绝对值**安位取反**，然后+1
 
 8位二进制表示数字时:
@@ -75,7 +75,6 @@ math.log(2 ** 64, 1.1) ≈ 465
 	加上符号位-5
 	
 同样的内容，如果当成unsigned int解析 = 251
-	
 
 ### 2147483647
 面对这样的数字存在10种人，第一种能像圆周率一样背下来，第二种就是一脸懵逼。那为什么它很重要呢，这个数字是32位有符号int能存储的最大值，即`2^31 - 1`。 范围是`[-2^31, 2^31 - 1]`, 其中0占据了正数的一个位置，所以正数少一个，负数多一个。
@@ -83,6 +82,43 @@ math.log(2 ** 64, 1.1) ≈ 465
 1. 这里的10种人，是2进制表示法
 2. ```2^31 - 1 = 2147483647```, 这是32-bit整数最大能表示的数字
 
+### 进制转换
+
+```python
+class Solution:
+    def convertToBase7(self, num: int) -> str:
+
+        if num == 0:
+            return "0"
+
+        res = ""
+        sign = "" if num > 0 else "-"
+        num = abs(num)
+        while num > 0:
+            d = num % 7
+            num = num // 7
+
+            res = str(d) + res
+
+        return sign + res
+```
+
+### 质数
+
+```python
+# 埃拉托斯特尼筛法 复杂度O(n * log log n) 
+# https://www.wolframalpha.com/input?i=plot+xlog%28log%28x%29%29+and+log%28x%29+and+x+from+1+to+10000
+def getPrimes(self, n):
+    primes = [True for i in range(n)]
+    primes[0] = primes[1] = False
+
+    for i in range(2, int(n ** 0.5) + 1):  # 乘法的对称性, [1x10 2x5 5x2 10x1]
+        if primes[i]:
+            for j in range(i * i, n, i): # # 把i的倍数标记为非质数
+                primes[j] = False
+
+    return primes
+```
 
 ## 位运算
 
@@ -105,8 +141,9 @@ x | x = x
 n & (n - 1) 消掉最低位的一个1
 n & (-n) 得到最低位的那个1 # -n = ~n + 1
 ```
+## 公因公倍数
 
-## 最大公因数
+### 最大公因数
 
 ```python
 # 欧几里得算法计算最大公约数
@@ -124,7 +161,33 @@ def gcd(a, b):
 
 可以用GCD来简化分子和分母分数表示，比如6/8, (6/gcd)/(8/gcd) = 3/4
  
-## 最小公倍数
+### 整除判断(公因数)
+
+**结论:** 
+
+$ i * j \; \% \; k == 0 $ 等价于 $ \gcd(i, k) * \gcd(j, k) \; \% \; k == 0 $
+
+假设:
+
+$ d_i = \gcd(i, k) $
+
+$ d_j = \gcd(j, k) $
+
+那么存在m和n，使得：
+
+$ i = d_i \times m \quad \text{且} \quad j = d_j \times n $
+
+展开：
+
+$ i \times j = (d_i \times m) \times (d_j \times n) = (d_i \times d_j) \times (m \times n) $
+
+已知：
+
+$ d_i \times d_j \; \% \; k == 0$
+
+所以得出结论
+
+### 最小公倍数
 
 ```python
 def gcd(a, b):
@@ -144,7 +207,7 @@ def lcm(a, b):
 ### 贝祖等式
 
 ```python
-# ax + by = gcd(a, b)
+# 存在 ax + by = gcd(a, b)， 其中，gcd(a, b) 是最大公约数，x 和 y 是整数
 def xgcd(a, b):
     if b == 0:
         return a, 1, 0
@@ -152,44 +215,6 @@ def xgcd(a, b):
     x = y1
     y = x1 - (a // b) * y1
     return gcd, x, y
-```
-
-## 质数
-
-```python
-# 埃拉托斯特尼筛法 复杂度O(n * log log n) 
-# https://www.wolframalpha.com/input?i=plot+xlog%28log%28x%29%29+and+log%28x%29+and+x+from+1+to+10000
-def getPrimes(self, n):
-    primes = [True for i in range(n)]
-    primes[0] = primes[1] = False
-
-    for i in range(2, int(n ** 0.5) + 1):  # 乘法的对称性, [1x10 2x5 5x2 10x1]
-        if primes[i]:
-            for j in range(i * i, n, i): # # 把i的倍数标记为非质数
-                primes[j] = False
-
-    return primes
-```
-
-## 进制转换
-
-```python
-class Solution:
-    def convertToBase7(self, num: int) -> str:
-
-        if num == 0:
-            return "0"
-
-        res = ""
-        sign = "" if num > 0 else "-"
-        num = abs(num)
-        while num > 0:
-            d = num % 7
-            num = num // 7
-
-            res = str(d) + res
-
-        return sign + res
 ```
 
 ## 概率
@@ -289,7 +314,7 @@ class Solution:
         return res.val
 ```
 
-## 拒绝采样
+### 拒绝采样
 
 拒绝采样（Rejection Sampling）是一种从复杂分布中生成样本的统计方法，特别是在目标分布难以直接采样时使用。利用一个简单的分布来生成候选样本，然后根据某个接受概率来决定是否接受这些候选样本
 
@@ -305,6 +330,62 @@ class Solution:
             res = 7 * (rand7() - 1) + rand7() - 1
 
         return res % 10 + 1
+```
+
+## 排列组合
+
+### 快速幂
+
+```python
+def power(n: int, p: int, mod: int) -> int:
+    res = 1
+    while p > 0:
+        if p % 2 == 1:
+            res = (res * n) % mod
+        
+        n = (n * n) % mod
+        p //= 2
+
+    return res
+```
+
+### 阶层
+
+$ \text{已知费马小定理: 如果 } p \text{ 是质数，且 } \gcd(a, p) = 1, \text{ 则 } a^{p-1} \equiv 1 \pmod{p},  \text{那么: } a \times a^{p-2} \equiv 1 \pmod{p}$
+
+$ \text{对于阶乘，我们想知道对于一个数 n! 的模逆，即想找到一个数 x，使得: } n! \times x \equiv 1 \pmod{p} $
+
+$ \text{如果使得: } a = n!, \text{那么： } x = a^{p-2} \pmod{p}$
+
+$ \text{已知阶层地推公式: } fact[k] = k \times fact[k-1], \text{ 然后两边都乘以invert[k], invert[k - 1]} $
+
+$ \text{得到如下: } invert[k - 1] = k \times invert[k] $
+
+```python
+def factorial(k: int, mod: int) -> tuple:
+    fact = [0] * (k + 1)
+    invert = [0] * (k + 1)
+    fact[0] = 1  # 0! is 1
+
+    for i in range(1, k + 1):
+        fact[i] = fact[i - 1] * i % mod
+
+    invert[k] = power(fact[k], mod - 2, mod)
+    for i in range(k, 0, -1):
+        invert[i - 1] = invert[i] * i % mod
+
+    return fact, invert
+```
+
+### 组合
+
+```python
+mod = 10 ** 9 + 7
+fact, invert = factorial(10 ** 5, mod)
+
+# mod对乘法没有影响，但对除法有，所以需要n!的逆元
+def comb(n: int, m: int, mod: int) -> int:
+    return fact[n] * invert[m] % mod * invert[n - m] % mod
 ```
 
 --End--
