update segment tree

--- a/_posts/Algorithm/2024-07-26-math.md
+++ b/_posts/Algorithm/2024-07-26-math.md
@@ -103,6 +103,21 @@ class Solution:
         return sign + res
 ```
 
+### 数位统计
+
+因为只统计`0～9`, 按照`9876543210`格式统计，结果是个数
+
+`10 ** (n % 10)`对应数位是多少 += 1
+
+```py
+def counter(n): # cpp 返回结果，要使用long long
+    res = 0
+    while n > 0:
+        res += 10 ** (n % 10)
+        n = n // 10
+    return res
+```
+
 ### 质数
 
 ```python
